--- a/app/views/blog_posts/edit.html.erb
+++ b/app/views/blog_posts/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>edit blog post</h1>
+<h3>edit blog post</h3>
 
 <%= render partial: 'form', locals: {blog_post: @blog_post} %> 
+<%= button_to "Delete", @blog_post, method: :delete, data: {turbo_confirm: 'Are you sure?'} %>
+
