--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -1,8 +1,10 @@
-<h1>My Blog</h1>
-
+<h1>Blogs</h1>
+</br>
 <%  @blog_posts.each do |blog_post| %>
     <div>
-        <h2>  <%= link_to blog_post.title, "blog_post/#{blog_post.id}" %> </h2>
+        <h3>  <%= link_to blog_post.title, "blog_posts/#{blog_post.id}" %> </h3>
         <h6>  <%= blog_post.body %> </h6>
     </div>
 <% end %> 
+</br>
+<button> <%= link_to 'New', "/blog_posts/new" %> </button>
